--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -134,7 +134,7 @@ jobs:
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
           sed -i -e "s/{{TAG}}/${{ steps.prep.outputs.versionTag }}/" deployment.yaml
           sed -i -e "s/{{DEPLOYMENT_NAME}}/gtfs-validator-snapshot-workload/g" deployment.yaml
-          sed -i -e "s/{{SECRET_NAME}}/${{SNAPSHOT_SECRET_NAME}}/g" deployment.yaml
+          sed -i -e "s/{{SECRET_NAME}}/${{secrets.SNAPSHOT_SECRET_NAME}}/g" deployment.yaml
       - name: Substitute values in service.yaml
         run: |
           sed -i -e "s/{{SERVICE_NAME}}/gtfs-validator-snapshot-service/" service.yaml
@@ -148,8 +148,8 @@ jobs:
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Create secrets
         run: |
-          kubectl delete secrets ${{SNAPSHOT_SECRET_NAME}}
-          kubectl create secret generic ${{SNAPSHOT_SECRET_NAME}} --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
+          kubectl delete secrets ${{secrets.SNAPSHOT_SECRET_NAME}}
+          kubectl create secret generic ${{secrets.SNAPSHOT_SECRET_NAME}} --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
       - name: Deploy to GKE
         id: deploy-to-gke
         run: kubectl apply -f deployment.yaml
@@ -193,8 +193,8 @@ jobs:
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Create secrets
         run: |
-          kubectl delete secrets ${{LATEST_RELEASE_SECRET_NAME}}
-          kubectl create secret generic ${{LATEST_RELEASE_SECRET_NAME}} --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
+          kubectl delete secrets ${{secrets.LATEST_RELEASE_SECRET_NAME}}
+          kubectl create secret generic ${{secrets.LATEST_RELEASE_SECRET_NAME}} --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
       - name: Deploy to GKE
         id: deploy-to-gke
         run: kubectl apply -f deployment.yaml
