--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -25,8 +25,4 @@ jobs:
     steps:
       - name: display matrix data
         run: |
-          my_array=${{ matrix.data}}
-          for i in ${my_array};
-          do
-            echo $i
-          done;
+          echo ${{ matrix.data}}
