--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -25,4 +25,4 @@ jobs:
     steps:
       - name: display matrix data
         run: |
-          ./run.sh ${{ matrix.data}}
+          sh ../../run.sh ${{ matrix.data}}
