--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -27,7 +27,4 @@ jobs:
       - name: display matrix data
         run: |
           ls
-          pwd
-          cd ../../
-          pwd
-          ls
+          sh run.sh ${{ matrix.data }}
