--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: display matrix data
         run: |
-          ls
+          echo ${{ matrix.data }}
           sh run.sh ${{ matrix.data }}
