--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -27,5 +27,5 @@ jobs:
       - name: display matrix data
         run: |
           my_array="(${{ matrix.data }})"
-          echo my_array
+          echo $my_array
           sh run.sh "${my_array[@]}"
