--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -26,7 +26,6 @@ jobs:
       - uses: actions/checkout@v1
       - name: display matrix data
         run: |
-          array_string="${{ matrix.data }}"
+          array_string=${{ matrix.data }}
           IFS=" " read -a data_array <<< $array_string
-          echo "$data_array"[@]
           sh run.sh ${data_array[@]}
