--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -27,5 +27,6 @@ jobs:
       - name: display matrix data
         run: |
           array_string=${{ matrix.data }}
+          echo $array_string
           IFS=" " read -a data_array <<< $array_string
-          sh run.sh ${data_array[@]}
+          echo ${data_array[@]}
