--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -27,6 +27,4 @@ jobs:
       - name: display matrix data
         run: |
           array_string="${{ matrix.data }}"
-          echo $array_string
-          IFS=" " read -a data_array <<< $array_string
-          echo ${data_array[@]}
+          sh run.sh array_string
