--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: display matrix data
         run: |
-          array_string=${{ matrix.data }}
+          array_string="${{ matrix.data }}"
           sh run.sh $array_string
