--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -89,6 +89,7 @@ jobs:
           name: gtfs-validator-master
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   fetch-urls:
+    needs: [ pack-master, pack-snapshot ]
     runs-on: ubuntu-latest
     steps:
       - name: Set URL matrix
