--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   pack-snapshot:
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
       - uses: actions/checkout@v1
       - name: Prepare version name
@@ -48,6 +49,7 @@ jobs:
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   pack-master:
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
       - uses: actions/checkout@v1
         with:
