--- a/app/pkg/build.gradle
+++ b/app/pkg/build.gradle
@@ -108,6 +108,7 @@ jlink {
             imageOptions = [
                     '--icon', "${projectDir}/src/main/icons/Icon.icns"
             ]
+            skipInstaller = true
         }
     }
 }
