--- a/scripts/mobility-database-harvester/requirements.txt
+++ b/scripts/mobility-database-harvester/requirements.txt
@@ -1,14 +1,8 @@
 cachetools==4.2.2
 certifi==2021.5.30
 charset-normalizer==2.0.4
-google-api-core==1.31.2
-google-auth==1.35.0
-google-cloud-core==1.7.2
-google-cloud-storage==1.40.0
-google-crc32c==1.1.5
-google-resumable-media==1.3.3
-googleapis-common-protos==1.53.0
 idna==3.2
+pandas==1.4.3
 packaging==21.0
 protobuf==3.17.3
 pyasn1==0.4.8
@@ -21,5 +15,3 @@ rsa==4.7.2
 six==1.16.0
 urllib3==1.26.6
 numpy==1.22.0
-tqdm==4.62.3
-google==3.0.0
