--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -54,7 +54,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # need full clone so ./grade
+          fetch-depth: 0 # need full clone so `./gradlew currentVersion` can search parents for older tags when needed
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
