--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
   pack-snapshot:
-    needs: [ validate-gradle-wrapper ]
+    needs: validate_gradle_wrapper
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
