--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Run snapshot validator on queued URLs
         run: |
           queue="${{ matrix.data }}"
-          bash ./scripts/queue_runner.sh false $queue
+          bash ./scripts/queue_runner.sh --exclude-master $queue
         env:
           OUTPUT_BASE: ${{ github.sha }}
       - name: Persist reports
